Fix: Endpoints not returning data
